# Frappe-Custom-UI-App

./: .gitignore  CONTIRBUTING.md  LICENSE  README.md  pyproject.toml
frappe_custom_ui_app/: hooks.py  modules.txt
frappe_custom_ui_app/config/: desktop.py  docs.py
frappe_custom_ui_app/frappe_custom_ui_app/doctype/custom_navbar_settings/: custom_navbar_settings.js  custom_navbar_settings.json  custom_navbar_settings.py  test_custom_navbar_settings.py
frappe_custom_ui_app/public/js/: custom_utilities.js
