[project]
name = "frappe_custom_ui_app"
authors = [
    { name = "Janak Vaghela", email = "janak@pseudocode.co"}
]
description = "A customizable Frappe app to enhance UI/UX with role-based controls, custom list view actions, and reusable UI components. Built for learning and Hacktoberfest contributions."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
